--- a/src/components/card-list/card-list.scss
+++ b/src/components/card-list/card-list.scss
@@ -1,21 +1,4 @@
-header.progress {
-    @apply flex bg-white shadow fixed bottom-0 w-full;
-
-    i {
-        @apply flex p-1 overflow-hidden text-xs justify-center flex;
-
-        &.passed {
-            @apply bg-teal-600;
-        }
-        &.pending {
-            @apply bg-neutral-300;
-        }
-        &.missed {
-            @apply bg-red-600;
-        }
-    }
-}
 div.card-list {
-    @apply grid gap-3 m-3 mb-12 overflow-auto;
+    @apply grid gap-3 m-3 mb-12 flex-1;
     @apply sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-7;
 }
