--- a/src/style.scss
+++ b/src/style.scss
@@ -5,41 +5,41 @@
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
 input[type="number"] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 .page {
-  @apply flex bg-neutral-100 w-screen h-screen overflow-auto;
+    @apply flex bg-neutral-100  overflow-auto;
 }
 
 button {
-  &.action {
-    @apply bg-white px-4 py-2 shadow font-semibold hover:shadow-sm hover:bg-neutral-100 active:bg-neutral-200 active:shadow-lg;
-  }
+    &.action {
+        @apply bg-white px-4 py-2 shadow font-semibold hover:shadow-sm hover:bg-neutral-100 active:bg-neutral-200 active:shadow-lg;
+    }
 
-  @apply flex rounded;
+    @apply flex rounded;
 }
 
 input {
-  &.search {
-    @apply w-full p-1 px-3 rounded-lg border shadow-sm active:shadow-lg;
-  }
+    &.search {
+        @apply w-full p-1 px-3 rounded-lg border shadow-sm active:shadow-lg;
+    }
 }
 
 .toolbar {
-  @apply flex bg-teal-700 p-3 border-b;
+    @apply flex bg-teal-700 p-3 border-b;
 }
 
 .content {
-  @apply flex flex-wrap flex-1 w-full;
+    @apply flex flex-wrap flex-1 w-full;
 }
 
 span.divider {
-  @apply flex-1;
+    @apply flex-1;
 }
