--- a/src/pages/dashbaord-page.scss
+++ b/src/pages/dashbaord-page.scss
@@ -1,10 +1,10 @@
 div.dashboard-page {
     @apply flex flex-col overflow-auto;
     & > header {
-        @apply fixed flex gap-3 bottom-0  w-full sm:w-auto sm:my-3 sm:mx-8;
+        @apply fixed flex gap-3 bottom-0 w-full sm:w-auto sm:my-3 sm:mx-8;
 
-        .stats-info {
-            @apply flex gap-3 bg-white p-3 shadow border-t sm:border sm:rounded-xl hover:shadow-xl;
+        a {
+            @apply flex items-center justify-center bg-black text-white px-6 rounded-xl border shadow hover:shadow-xl hover:bg-gray-800 hover:text-yellow-200;
         }
     }
     & > section {
